--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -78,15 +78,17 @@
    Feb 15, 2018 & 1.3 & SM, SMC, SS, CV and SR & Christopher McDonald \& Harit Patel \& Sam Hamel \\ \hline
    Feb 16-17, 2018 & 1.4 & Executive Summary and Testing & Christopher McDonald \& Sharon Platkin  \\ \hline
    Apr 6, 2018 & 2.0 & Added integration tests, fixed grammar and added test instructions & Christopher McDonald  \\ \hline
+   Apr 10, 2018 & 2.0 & Preformed tests and wrote executive summary & Christopher McDonald \& Sharon Platkin \& Sam Hamel  \\ \hline
+
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
 \newpage
 \section{Executive Summary of Testing}
-% 62 tests
-The testing completed on April 8th, 2018 has yielded ? passes, ? failures, and ? pending. Pending tests have not been executed due to lack of relevance at this stage. The failures in their entirety can be attributed to features that are in progress or that have not yet been implemented including; automated roll and pitch as well as the machine learning model. Given that the failure rate is roughly 17\%, the team does not recommend operation of the project at this time. \\ \\
-An important note to consider is that most errors are localized in the Shooting Mechanism and ShotRecommender subsystems. The team would also like to expand testing further to have higher coverage of the system and increase their confidence in its reliability. \\ \\
-The team will continue developing the system until March 9th where tests will be redefined and added to satisfy the team's ideals. After which, the second round of testing will commence.
+% 63 tests, 7 fails
+This testing phase completed on April 10th, 2018 and has yielded 56 passes and 7 failures. The failures occurred predominately in the Computer Vision and Shooting categories. The Computer Vision tests did not reach the desired accuracy levels and the shooting mechanism did not hit the desired zones during some of the tests. \\ \\
+The team is confident in the coverage of the functional requirements based on the traceability matrices shown in Tables \ref{label1} and \ref{label2}. In these tables, every requirement has at least one test case which covers it. This is less true for non-functional requirements since 3 of the 18 have no test cases as shown in Tables \ref{label3} and \ref{label4}. These requirements were too difficult to test in an objective way and are thus omitted from this document.\\\\
+These results accurately represent the priorities of the team to make the system more reliable, responsive and accurate. The team will continue developing the system until April 26th, after which the final presentation will take place on the 27th.
 \section{Introduction}
 \subsection{Project Overview}
 SmartServe is an autonomous table tennis training system for table tennis players with various skill levels. SmartServe aids in diagnosing and improving a player's performance over time. The system trains table tennis players by shooting table tennis balls towards the player and detects successful returns from the player. The system can further adapt to the player's weaknesses and help them overcome it through further training. Importantly, SmartServe alleviates the problems of finding and working with a coach for players, as well as coaches trying to train multiple players simultaneously. The system will be deemed a success if the table tennis players and coaches can enjoy and see some value added by using SmartServe.\\\\
@@ -419,13 +421,29 @@ The following items should be preformed in succession to set up the system for t
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: CV11	&Status: ???\\[-3mm]
-	\multicolumn{2}{|c|}{\textbf{\large{CV Accuracy Test}}}\\&\\\hline&\\[-3mm]
-	\multicolumn{2}{|p{\textwidth}|}{Description: CV should detect successful hits and misses}\\[1mm]\hline&\\[-3mm]
+	Test ID: CV11	&Status: FAIL\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{CV Accuracy Test 1}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: CV should detect successful hits}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: 80\% accuracy rate}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: N/A}\\[4mm]
-	\multicolumn{2}{|p{\textwidth}|}{Input: 10 bounces and 10 misses will be thrown in front of the camera}\\[2mm]\hline
-	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: CV subsystem detects each throw correctly}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ???}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: 10 valid bounces}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: CV subsystem detects each throw correctly}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: 10\% accuracy}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{CV Accuracy Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: CV12	&Status: FAIL\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{CV Accuracy Test 2}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: CV should detect misses}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: 80\% accuracy rate}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: N/A}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: 10 misses will be thrown in front of the camera}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: CV subsystem detects each throw correctly}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: 30\% accuracy rate}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
 \end{tabular}
 \caption{CV Accuracy Test}
@@ -1108,13 +1126,13 @@ The following items should be preformed in succession to set up the system for t
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: HI1	&Status: ???\\[-3mm]
+	Test ID: HI1	&Status: PASS\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{Shooting Test - Shot 1}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: The system can fetch a shot with ID: 48 and shoot it}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: N/A}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The system is in the home position.}\\[4mm]
 	\multicolumn{2}{|p{\textwidth}|}{Input: one-shot mode set at ID 48.}\\[2mm]\hline
-	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: The shot hits zone 17, with a pitch of 20 and roll angle of 0.}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ???}\\\hline&\\[-3mm]
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: The shot hits zone 17, with a pitch of 20 and roll angle of 0.}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: As expected}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
 \end{tabular}
 \caption{Shooting Test - Shot 1}
@@ -1124,13 +1142,13 @@ The following items should be preformed in succession to set up the system for t
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: HI2	&Status: ???\\[-3mm]
+	Test ID: HI2	&Status: FAIL\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{Shooting Test - Shot 2}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: The system can fetch a shot with ID: 91 and shoot it}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: N/A}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The system is in the home position.}\\[4mm]
 	\multicolumn{2}{|p{\textwidth}|}{Input: one-shot mode set at ID 91.}\\[2mm]\hline
-	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: The shot hits zone 12, with a pitch of 10 and roll angle of 90.}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ???}\\\hline&\\[-3mm]
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: The shot hits zone 12, with a pitch of 10 and roll angle of 90.}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: Hit once out of 3 attempts}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
 \end{tabular}
 \caption{Shooting Test - Shot 2}
@@ -1140,13 +1158,13 @@ The following items should be preformed in succession to set up the system for t
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: HI3	&Status: ???\\[-3mm]
+	Test ID: HI3	&Status: FAIL\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{Shooting Test - Consecutive Shots}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: The system can shoot two shots consecutively with IDs 148 and 193.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: N/A}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The system is in the home position.}\\[4mm]
 	\multicolumn{2}{|p{\textwidth}|}{Input: one-shot mode set at ID 148 and then 193.}\\[2mm]\hline
-	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: The shot hits zone 5, with a pitch of 10 and roll angle of 180, which is followed by another shot that hits zone 2 with a pitch of 0 and roll angle of 270. }	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ???}\\\hline&\\[-3mm]
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: The shot hits zone 5, with a pitch of 10 and roll angle of 180, which is followed by another shot that hits zone 2 with a pitch of 0 and roll angle of 270. }	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: Did not work}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
 \end{tabular}
 \caption{Shooting Test - Consecutive Shots}
@@ -1156,13 +1174,13 @@ The following items should be preformed in succession to set up the system for t
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: HI4	&Status: ???\\[-3mm]
+	Test ID: HI4	&Status: FAIL\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{Shooting Test - Repeatability}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: The system can shoot three shots consecutively with IDs 148, 193 and 148.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The same zone is hit for the first and third shot, at the same pitch and roll angles.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The system is in the home position.}\\[4mm]
 	\multicolumn{2}{|p{\textwidth}|}{Input: one-shot mode set at ID 148, 193 and then 148.}\\[2mm]\hline
-	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: the first and third shot should be identical}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ???}\\\hline&\\[-3mm]
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: the first and third shot should be identical}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: Did not work}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
 \end{tabular}
 \caption{Shooting Test - Repeatability}
@@ -1174,7 +1192,7 @@ The following items should be preformed in succession to set up the system for t
 \begin{table}[H]
 \centering
 \caption{Matrix to Match Tests to Functional Requirements [1]}
-\label{my-label}
+\label{label1}
 \begin{tabular}{| l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l |}
 \hline
 \multicolumn{19}{|c|}{\textbf{Functional Requirement-Test Matrix}}                          \\ \hline
@@ -1196,6 +1214,7 @@ CV8&&&&&X&&&&&&&&&&&&& \\ \hline
 CV9&&&&&X&&&&&&&&&&&&& \\ \hline
 CV10&&&&&&X&&&&&&&&&&&& \\ \hline
 CV11&&&&&X&&&&&&&&&&&&& \\ \hline
+CV12&&&&&X&&&&&&&&&&&&& \\ \hline
 SR1&&&&&&&&&&&&&&X&X&&& \\ \hline
 SR2&&&&&&&X&&&&&&&X&X&&& \\ \hline
 SR3&&&&&&&&&&&&&&&&&& \\ \hline
@@ -1215,7 +1234,7 @@ DS5&&&&&X&X&X&X&&&&&X&&&&& \\ \hline
 \begin{table}[H]
 \centering
 \caption{Matrix to Match Tests to Functional Requirements [2]}
-\label{my-label}
+\label{label2}
 \begin{tabular}{| l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l |}
 \hline
 \multicolumn{19}{|c|}{\textbf{Functional Requirement-Test Matrix}}                          \\ \hline
@@ -1259,7 +1278,7 @@ HI4&X&X&X&X&&&&&&&&&&&X&&& \\ \hline
 \begin{table}[H]
 \centering
 \caption{Matrix to Match Tests to Non-Functional Requirements [1]}
-\label{my-label}
+\label{label3}
 \begin{tabular}{| l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l |}
 \hline
 \multicolumn{19}{|c|}{\textbf{Non-Functional Requirement-Test Matrix}}                          \\ \hline
@@ -1281,6 +1300,7 @@ CV8&&&&&&&&&&&&&&&&&& \\ \hline
 CV9&&&&&&&&&&&&&&&&&& \\ \hline
 CV10&&&&&&&&&&&&&&&&&& \\ \hline
 CV11&&&&&&&&&&&&&&&&&& \\ \hline
+CV12&&&&&&&&&&&&&&&&&& \\ \hline
 SR1&&&&&&&&&&&&&&X&X&&& \\ \hline
 SR2&&&&&&&&&&&&&&X&&&& \\ \hline
 SR3&&&&&&&&&&&&&&X&&&& \\ \hline
@@ -1300,11 +1320,11 @@ DS5&&&&&&&&&X&&X&&&&&&& \\ \hline
 \begin{table}[H]
 \centering
 \caption{Matrix to Match Tests to Non-Functional Requirements [2]}
-\label{my-label}
+\label{label4}
 \begin{tabular}{| l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l |}
 \hline
 \multicolumn{19}{|c|}{\textbf{Non-Functional Requirement-Test Matrix}}                          \\ \hline
- & \tiny{LF1} & \tiny{UH1} & \tiny{UH2} & \tiny{P1} & \tiny{P2} & \tiny{P4} & \tiny{P5} & \tiny{OE2} & \tiny{MS2} & \tiny{S1} & \tiny{S2} & \tiny{P1} & \tiny{LC1} & \tiny{HS1} & \tiny{HS2} & \tiny{HS3} & \tiny{HS4} & \tiny{HS5} \\ \hline\
+ & \tiny{LF1} & \tiny{UH1} & \tiny{UH2} & \tiny{P1} & \tiny{P2} & \tiny{P4} & \tiny{P5} & \tiny{OE2} & \tiny{MS2} & \tiny{S1} & \tiny{S2} & \tiny{P1} & \tiny{LC1} & \tiny{HS1} & \tiny{HS2} & \tiny{HS3} & \tiny{HS4} & \tiny{HS5} \\ \hline
 UI1&X&X&X&&X&X&X&&X&X&&X&&&&&& \\ \hline
 UI2&X&X&X&X&&&&&&&&&&&&&& \\ \hline
 UI3&&&X&X&&&&&&&&&&&&&& \\ \hline
