added details for onboarding

--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -75,6 +75,7 @@
    \hline
    October 28, 2017 & 1.0 & Added structure and content & Christopher McDonald \\ \hline
    October 30, 2017 & 1.1 & Added detail into Version Control section and revised document & Sharon Platkin \& Christopher McDonald \\ \hline
+   April 11, 2018 & 2.0 & Added details for onboarding & Sharon Platkin \& Christopher McDonald \\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
@@ -203,5 +204,12 @@ The following tools will need to be installed by the member with the help of the
 \begin{itemize}
 \item Git version 2.14.0 found \href{https://git-scm.com}{here}
 \item LaTeX version \LaTeX  $2_\varepsilon$ found \href{https://www.latex-project.org/get/}{here}
+\item MySQL server found \href{https://dev.mysql.com/downloads/installer/}{here}
+\item Python version 3.6 \href{https://www.python.org/downloads/}{here}
+\item PIP found \href{https://pip.pypa.io/en/stable/installing/}{here}
+\item OpenCV found \href{https://pypi.python.org/pypi/opencv-python}{here}
+\item Flask found \href{http://flask.pocoo.org/docs/0.12/installation/}{here}
+\item Arduino IDE found \href{https://www.arduino.cc/en/Main/Software}{here}
+\item Java Runtime Environment Version 8 found \href{https://java.com/en/download/}{here}
 \end{itemize}
 \end{document}  
